Sidebar z-index fix

--- a/resources/assets/sass/src/common.scss
+++ b/resources/assets/sass/src/common.scss
@@ -64,7 +64,7 @@ ul {
 	bottom: 0;
 	left: 0;
 	background: #111;
-	z-index: 1;
+	z-index: 10;
 	transform: translateX(100%);
 	transition: .15s ease all;
 	opacity: 0;
